--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <title>Calculadora de Divisas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PFT886EMJC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PFT886EMJC');
+</script>
+
 <body>
     <div class="container">
         <h1>Calculadora de Divisas</h1>
