--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
         </div>
     </div>
 
-<footer>
-    <p>Propiedad de Genesis Contreras</p>
-</footer>
+    <footer>
+        <p>Por cortesía de <a href="https://instagram.com/ge.boutique21/profilecard/?igsh=MTd4enhpY3lrd2t1cA==" target="_blank">ge.boutique</a></p>
+    </footer>
+    
 
     <script src="main.js"></script>
 </body>
