--- a/index.html
+++ b/index.html
@@ -45,17 +45,20 @@
 
         <div id="resultados">
             <h2>Resultados</h2>
-            <p id="paralelo-result">Costo en (Paralelo): -- 
+            <p>
+                <span id="paralelo-result">Costo en (Paralelo): --</span>
                 <button class="copy-button" data-target="paralelo-result" title="Copiar">
                     <i class="fa fa-copy"></i>
                 </button>
             </p>
-            <p id="promedio-result">Costo en (Promedio): -- 
+            <p>
+                <span id="promedio-result">Costo en (Promedio): --</span>
                 <button class="copy-button" data-target="promedio-result" title="Copiar">
                     <i class="fa fa-copy"></i>
                 </button>
             </p>
-            <p id="bcv-result">Costo en (BCV): -- 
+            <p>
+                <span id="bcv-result">Costo en (BCV): --</span>
                 <button class="copy-button" data-target="bcv-result" title="Copiar">
                     <i class="fa fa-copy"></i>
                 </button>
