--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <i class="fa fa-history" aria-hidden="true"></i>
             </button>
             <span id="last-update">Última actualización local: --</span>
-            <p id="paralelo-valor">Dólar Paralelo: --</p>
+            <p id="paralelo-valor">Euro BCV: --</p>
             <p id="promedio-valor">Dólar Promedio: --</p>
             <p id="bcv-valor">Dólar BCV: --</p>
         </div>
@@ -46,7 +46,7 @@
         <div id="resultados">
             <h2>Resultados</h2>
             <p>
-                <span id="paralelo-result">Costo en (Paralelo): --</span>
+                <span id="paralelo-result">Costo en (EUROS): --</span>
                 <button class="copy-button" data-target="paralelo-result" title="Copiar">
                     <i class="fa fa-copy"></i>
                 </button>
