--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             <p id="bcv-valor">Dólar BCV: --</p>
         </div>
 
-        <form id="mi-form" onsubmit="">
+        <div id="mi-form">
             <label for="mi-input" id="labelMonto">Ingresa el monto:</label>
             <input type="number" step="0.01" id="mi-input" placeholder="Monto en USD">
             <input type="number" step="0.01" id="mi-input2" placeholder="Monto en Bs">
-            <button class="buttonSubmit" type="submit">Restablecer todo</button>
-        </form>
+            <button class="buttonSubmit" type="button" id="reset-button">Restablecer todo</button>
+        </div>
 
         <div id="resultados">
             <h2>Resultados</h2>
@@ -67,8 +67,10 @@
     </div>
 
     <footer>
-        <p>Por cortesía de <a href="https://instagram.com/ge.boutique21/profilecard/?igsh=MTd4enhpY3lrd2t1cA=="
-                target="_blank" style="background-color: rgb(19, 148, 223); border-radius: 10px; padding: 10px; text-decoration: none;">Ge.boutique</a></p>
+        <p>Por cortesía de <a href=""
+                target="_blank"
+                style="background-color: rgb(19, 148, 223); border-radius: 10px; padding: 10px; text-decoration: none;">Pachescripts</a>
+        </p>
     </footer>
 
 
