--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <label for="mi-input" id="labelMonto">Ingresa el monto:</label>
             <input type="number" step="0.01" id="mi-input" placeholder="Monto en USD">
             <input type="number" step="0.01" id="mi-input2" placeholder="Monto en Bs">
-            <button class="buttonSubmit" type="button" id="reset-button">Restablecer todo</button>
+            <button class="buttonSubmit" type="button" id="reset-button">Limpiar todo</button>
         </div>
 
         <div id="resultados">
