--- a/index.html
+++ b/index.html
@@ -2,35 +2,28 @@
 <html lang="es">
 
 <head>
-    <meta name="description" content="Calculator">
-    <meta name="keywords" content="HTML,CSS,JavaScript">
+    <meta name="description" content="Calculadora de Divisas">
+    <meta name="keywords" content="Calculadora, Divisas, Dólar, Euro, BCV">
     <meta name="author" content="Relly Garcia">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets\calculator.png">
+    <link rel="shortcut icon" href="assets/calculator.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <title>Calculadora de Divisas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PFT886EMJC"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-PFT886EMJC');
-</script>
 
 <body>
     <div class="container">
-        <h1>Calculadora de Divisas</h1>
+        <h1><i class="fa fa-calculator"></i> Calculadora de Divisas</h1>
 
         <!-- Mostrar valores del USD -->
         <div id="dolar-valores">
-            <button id="update-button" title="Actualizar">
-                <i class="fa fa-history" aria-hidden="true"></i>
-            </button>
-            <span id="last-update">Última actualización local: --</span>
+            <div style="display: inline-block;">
+                <button id="update-button" title="Actualizar valores">
+                    <i class="fa fa-history" aria-hidden="true"></i>
+                </button>
+                <span id="last-update">Cargando...</span>
+            </div>
             <p id="paralelo-valor">Euro BCV: --</p>
             <p id="promedio-valor">Dólar Promedio: --</p>
             <p id="bcv-valor">Dólar BCV: --</p>
@@ -38,28 +31,30 @@
 
         <div id="mi-form">
             <label for="mi-input" id="labelMonto">Ingresa el monto:</label>
-            <input type="number" step="0.01" id="mi-input" placeholder="Monto en USD">
-            <input type="number" step="0.01" id="mi-input2" placeholder="Monto en Bs">
-            <button class="buttonSubmit" type="button" id="reset-button">Limpiar todo</button>
+            <input type="number" step="0.01" id="mi-input" placeholder="Monto en USD" inputmode="decimal">
+            <input type="number" step="0.01" id="mi-input2" placeholder="Monto en Bs" inputmode="decimal">
+            <button class="buttonSubmit" type="button" id="reset-button">
+                <i class="fa fa-broom"></i> Limpiar todo
+            </button>
         </div>
 
         <div id="resultados">
-            <h2>Resultados</h2>
+            <h2><i class="fa fa-chart-line"></i> Resultados</h2>
             <p>
                 <span id="paralelo-result">Costo en (EUROS): --</span>
-                <button class="copy-button" data-target="paralelo-result" title="Copiar">
+                <button class="copy-button" data-target="paralelo-result" title="Copiar valor">
                     <i class="fa fa-copy"></i>
                 </button>
             </p>
             <p>
                 <span id="promedio-result">Costo en (Promedio): --</span>
-                <button class="copy-button" data-target="promedio-result" title="Copiar">
+                <button class="copy-button" data-target="promedio-result" title="Copiar valor">
                     <i class="fa fa-copy"></i>
                 </button>
             </p>
             <p>
                 <span id="bcv-result">Costo en (BCV): --</span>
-                <button class="copy-button" data-target="bcv-result" title="Copiar">
+                <button class="copy-button" data-target="bcv-result" title="Copiar valor">
                     <i class="fa fa-copy"></i>
                 </button>
             </p>
@@ -67,12 +62,9 @@
     </div>
 
     <footer>
-        <p>Por cortesía de <a href=""
-                target="_blank"
-                style="background-color: rgb(19, 148, 223); border-radius: 10px; padding: 10px; text-decoration: none;">Pachescripts</a>
-        </p>
+        <p>Calculadora de Divisas © 2024</p>
+        <p>Por cortesía de <a href="" target="_blank">Pachescripts</a></p>
     </footer>
-
 
     <script src="main.js"></script>
 </body>
